<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/choose_identity"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- logo区，自适应比例 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="0.35">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="logo"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="欢迎使用视无界"
        android:textColor="@color/gray_400"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_volunteer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_gray"
            android:text="@string/i_am_volunteer"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_blind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/i_am_blind"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout> 